--- a/index.html
+++ b/index.html
@@ -305,16 +305,16 @@
                      <div class="email_text">
                         <form action="" id="submit-form">
                            <div class="form-group">
-                              <input type="text" class="email-bt" placeholder="Name" name="Name">
+                              <input type="text" class="email-bt" placeholder="Name" name="Name" required>
                            </div>
                            <div class="form-group">
-                              <input type="email" class="email-bt" placeholder="Email" name="Email">
+                              <input type="email" class="email-bt" placeholder="Email" name="Email" required>
                            </div>
                            <div class="form-group">
-                              <input type="tel" class="email-bt" placeholder="Phone Number" name="Phone Number">
+                              <input type="tel" class="email-bt" placeholder="Phone Number" name="Phone Number" required>
                            </div>
                            <div class="form-group">
-                              <textarea class="massage-bt" placeholder="Message" rows="5" id="comment" name="Message"></textarea>
+                              <textarea class="massage-bt" placeholder="Message" rows="5" id="comment" name="Message"></textarea required>
                            </div>
                            <div class="send_btn">
                               <button class="send-btn" type="submit">Send</button>  
